ALLOWED_ORIGINS additions